# MRO

./: README.md  main_online.py  main_online_prm.py  main_online_ptrue.py  requirement.txt
edgereasoning/: AUTHORS  Makefile  README.md  energy_model.py  interactive.py  latency_model.py  notebook.ipynb  postprocess.py  power_model.py  pyproject.toml  requirements.txt  validate_analyticals.py
edgereasoning/analysis/: fit_decode_latency.py  validate_latency.py
edgereasoning/benchmarks/agentic_planner/: requirements.txt  run.sh
edgereasoning/benchmarks/agentic_planner/PATCHES/: 000000-evaluate_meeting_planning.py.patch  UPSTREAM_COMMIT.txt
edgereasoning/benchmarks/synthetic/decode/: synthetic_llama.csv  synthetic_qwen.csv
edgereasoning/benchmarks/synthetic/prefill/: synthetic_llama.csv
edgereasoning/config/: analytic.yaml
edgereasoning/data/: README.md
edgereasoning/data/aime/: .gitkeep
edgereasoning/data/mmlu/: .gitkeep
edgereasoning/data/planner/: .gitkeep
edgereasoning/data/synthetic/: .gitkeep
edgereasoning/eval/server/mmlu/: README.md  run.sh
edgereasoning/eval/server/mmlu/callers/: base.sh  scale.sh
edgereasoning/eval/server/mmlu/configs/: base.yaml  budget.yaml  direct.yaml  noreasoning.yaml  scale.yaml
edgereasoning/eval/server/mmlu/scripts/: base.py  budget.py  direct.py  noreasoning.py  scale.py
edgereasoning/eval/server/mmlu/src/evaluators/: __init__.py  base_evaluator.py  noreasoning_evaluator.py  scale_evaluator.py
edgereasoning/eval/server/mmlu/src/models/: vllm_model.py
edgereasoning/eval/server/mmlu/src/telemetry/: monitor.py
edgereasoning/eval/server/mmlu/src/utils/: cleanup.py  summary.py
edgereasoning/eval/server/planner/: planner.py  run.sh  sessions.sh
edgereasoning/eval/server/planner/callers/: budget.sh  direct.sh  gpu.conf  models.conf  tt_scale.sh
edgereasoning/eval/server/planner/configs/: budget.yaml  calendar_planner.yaml  direct_planner.yaml  meeting_planner.yaml  scale.yaml  trip_planner.yaml
edgereasoning/eval/server/planner/src/: __init__.py
edgereasoning/eval/server/planner/src/data_loaders/: __init__.py  mmlu_loader.py  natural_plan_loader.py
edgereasoning/eval/server/planner/src/evaluators/: __init__.py  base_evaluator.py  budget_evaluator.py  noreasoning_evaluator.py  plan_evaluator_base.py  plan_evaluator_budget.py  plan_evaluator_direct.py  plan_evaluator_scaling.py  scale_evaluator.py
edgereasoning/eval/server/planner/src/models/: __init__.py  vllm_model.py
edgereasoning/eval/server/planner/src/run_mmlu/: all_budget.py  all_noreason.py  all_scale.py  check_sweep_status.sh  count_results.sh  launch.sh  run_budget.sh
edgereasoning/eval/server/planner/src/telemetry/: __init__.py  monitor.py  nvml_telemetry.py
edgereasoning/eval/server/planner/src/utils/: __init__.py  (+1 more)
edgereasoning/eval/server/planner/tests/: analyze_tokens.py  api_metrics.sh  check_vllm_metrics.sh  test_vllm_metrics.py
edgereasoning/eval/server/planner/tools/: docker_setup.sh  resume_eval.py  shipVllm.sh
edgereasoning/eval/tegra/: open.sh  original_open.sh
edgereasoning/eval/tegra/mmlu/: README.md  launch.sh  models.txt  requirements.txt
edgereasoning/eval/tegra/mmlu/callers/: base.sh  budget.sh  tt_scaling.sh
edgereasoning/eval/tegra/mmlu/configs/: base.yaml  budget.yaml  custom.yaml  noreasoning.yaml  prefill.yaml  scale.yaml
edgereasoning/eval/tegra/mmlu/scripts/: base.py  budget.py  tt_scaling.py
edgereasoning/eval/tegra/mmlu/synthetic/: decode.py  prefill.py  tt_scaling.py
edgereasoning/eval/tegra/mmlu/tokenizer/: create_synthetic_data.py
edgereasoning/eval/tegra/tools/: container.sh
edgereasoning/files/: benchmarks.yaml  models.yaml  results.yaml
edgereasoning/loaders/: analytic.py  benchmarks.py  models.py  results.py
edgereasoning/plotting/: insights.py  plot_L1_PS.py  plot_accuracy_figs.py  plot_predicted_energy.py  utils.py
edgereasoning/processing/: README.md  __init__.py  data_models.py  performance_analyzer.py  report_generator.py  result_consolidator.py
edgereasoning/runners/: collect_env.py
edgereasoning/scripts/: bootstrap.py  fetch_natural_planner.sh  fetch_token2metrics.sh  install.sh
edgereasoning/validation/: decode.json  decode_parameters.json  prefill.json
(+19 files in other folders)
